--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@ h1 {font-family: Georgia; font-size:35pt}
 University of Georgia 2019 Football Season
 <div style="text-align=center">
 <h1>2019 Schedule</h1>
+  </body>
 </html>
