--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <title> Go Dawgs</title>
 <meta charset="utf-8">
 <stlye type="text/css">
-P {font-family:Impact}
-BODY {background-color:#F02424}
-h1 {font-family: Georgia; font-size:35pt}
+<P {font-family:Impact}>
+<BODY {background-color:#F02424}>
+<h1 {font-family: Georgia; font-size:35pt}>
+  2019 Georgia Bulldogs Schedule
+  </P>
+  </BODY>
+  </h1>
 </style>
 </head>
-<body>
 University of Georgia 2019 Football Season
 <div style="text-align=center">
 <h1>2019 Schedule</h1>
