--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <P {font-family:Impact}>
 <BODY {background-color:#F02424}>
 <h1 {font-family: Georgia; font-size:35pt}>
-  2019 Georgia Bulldogs Schedule
   </P>
   </BODY>
   </h1>
@@ -16,5 +15,12 @@
 University of Georgia 2019 Football Season
 <div style="text-align=center">
 <h1>2019 Schedule</h1>
+  <ol type="a">
+    <li>8/31 <b>Georgia @ Vanderbilt</b></li>
+    <li>9/7 Murray State @ Georgia</li>
+    <li>9/14 Arkansas St @ Georgia</li>
+    <li>9/21 Notre Dame @ Georgia</li>
+    <li>10/5 Georgia @ Tennessee</li>
+  </ol>
   </body>
 </html>
