--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 University of Georgia 2019 Football Season
 <div style="text-align=center">
+  <body>
 <h1>2019 Schedule</h1>
   <ol type="a">
     <li>8/31 <b>Georgia @ Vanderbilt</b></li>
