--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@ University of Georgia 2019 Football Season
 <div style="text-align=center">
   <body>
 <h1>2019 Schedule</h1>
-  <ol type="a">
+  <ol type="A">
     <li>8/31 <b>Georgia @ Vanderbilt</b></li>
-    <li>9/7 Murray State @ Georgia</li>
-    <li>9/14 Arkansas St @ Georgia</li>
-    <li>9/21 Notre Dame @ Georgia</li>
-    <li>10/5 Georgia @ Tennessee</li>
+    <li>9/7 <b>Murray State @ Georgia</b></li>
+    <li>9/14 <b>Arkansas St @ Georgia</b></li>
+    <li>9/21 <b>Notre Dame @ Georgia</b></li>
+    <li>10/5 <b>Georgia @ Tennessee</b></li>
+    <li>10/12 <b>South Carolina @ Georgia</b></li>
+    <li>10/19 <b>Kentucky @ Georgia</b></li>
+    <li>11/2 <b>Georgia @ Florida</b></li>
+    <li>11/9 <b>Missouri @ Georgia</b></li>
+    <li>11/16 <b>Georgia @ Auburn</b></li>
+    <li>11/23 <b>Texas A&M @ Georgia</b></li>
+    <li>11/30 <b>Georgia @ Georgia Tech</b></li>
   </ol>
   </body>
 </html>
