--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Foodie in Ath</title>
   </head>
 <body>
-  <H1>WELCOME TO ATHENS</H1>
-    <div style="text-align:center">
+ <div style="text-align:center">
+    <H1>WELCOME TO ATHENS</H1>
+ <P> Hi! We all love to eat right? Well this is your guide to the top food places in Athens. I will break these places down into categories including Breakfast, Lunch, Dinner, and Dessert. Please keep in mind as you're reviewing this page that this is solely based on my opinion. With that being said lets get into it!</P>
 </html>
