--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
  <div style="text-align:center">
     <H1>WELCOME TO ATHENS</H1>
  <P>Hi! We all love to eat right? Well this is your guide to the top food places in Athens. I will break these places down into categories including Breakfast, Lunch, Dinner, and Dessert. In the tables you will see symbols beside the restaurant like $, $$, $$$. One dollar sign means Cheap, two dollar signs mean Affordable, and three dollar signs mean Expensive. Please keep in mind as you're reviewing this page that this is solely based on my opinion. With that being said lets get into it!</P>
-  <div style="text-align:left">
    <H2>BREAKFAST</H2>
+  </div>
+     <div style="text-align:left">
     <H3>TOP 5</H3>
  <ol type="A">
    <li><b>Mama's Boy</b></li>
@@ -16,5 +17,15 @@
    <li><b>Athens Bagel Company</b></li>
    <li><b>Mayflower Restaurant</b></li>
  </ol>
+  </div>
+  <div style="text-align:right">
+    <H3>Money</H3>
+    <table border=1>
+      <tr>
+        <th>Mama's Boy</th><th>Ike and Jane Cafe and Bakery</th><th>Mama Jewel's Kitchen</th><th>Athens Bagel Company</th><th>Mayflower Restaurant</th>
+      </tr>
+      <tr>
+        <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
+      </tr>
    </body>
 </html>
