--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
    <li><b>Athens Bagel Company</b></li>
    <li><b>Mayflower Restaurant</b></li>
  </ol>
-  </div>
-  <div style="text-align:right">
-    <H3>Money</H3>
+    <H3>PRICING</H3>
     <table border=1>
       <tr>
         <th>Mama's Boy</th><th>Ike and Jane Cafe and Bakery</th><th>Mama Jewel's Kitchen</th><th>Athens Bagel Company</th><th>Mayflower Restaurant</th>
       </tr>
+      </div>
+      <div style="text-align:center">
       <tr>
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
+      </div
    </body>
 </html>
