--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </div>
      <div style="text-align:left">
     <H3>TOP 5</H3>
- <ol type="A">
+ <ol type="value">
    <li><b>Mama's Boy</b></li>
    <li><b>Ike and Jane Cafe and Bakery</b></li>
    <li><b>Mama Jewel's Kitchen</b></li>
@@ -27,6 +27,75 @@
       <tr>
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
-      </div
+       </div>
+      <div style="text-align:center">
+        <H2>LUNCH</H2>
+       </div>
+       <div style="text-align:left">
+         <H3>TOP 5</H3>
+ <ol type="value>
+        <li><b>The Place</b></li>
+        <li><b>The National</b></li>
+        <li><b>Clocked</b></li>
+        <li><b>Heirloom Cafe</b></li>
+        <li><b>Cali-n-Tito's</b></li>
+ </ol> 
+ <H3>PRICING</H3>
+    <table border=1>
+      <tr>
+        <th>The Place</th><th>The National</th><th>Clocked</th><th>Heirloom Cafe</th><th>Cali-n-Tito's</th>
+      </tr>
+      </div>
+      <div style="text-align:center">
+      <tr>
+        <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
+      </tr>
+       </div>
+  <div style="text-align:center">
+        <H2>DINNER</H2>
+   </div>
+   <div style="text-align:left">
+         <H3>TOP 5</H3>
+ <ol type="value>
+        <li><b>Last Resort Grill</b></li>
+        <li><b>Trappeze Pub</b></li>
+        <li><b>South Kitchen+Bar</b></li>
+        <li><b>Taqueria Tsunami</b></li>
+        <li><b>Taqueria del Sol</b></li>
+ </ol> 
+  <H3>PRICING</H3>
+    <table border=1>
+      <tr>
+        <th>Last Resort Grill</th><th>Trappeze Pub</th><th>South Kitchen+Bar</th><th>Taqueria Tsunami</th><th>Taqueria del Sol</th>
+      </tr>
+      </div>
+      <div style="text-align:center">
+      <tr>
+        <td>$$$</td><td>$$</td><td>$$$</td><td>$$</td><td>$$</td>
+      </tr>
+       </div>
+   <div style="text-align:center">
+        <H2>DESSERT</H2>
+   </div>
+   <div style="text-align:left">
+         <H3>TOP 5</H3>
+ <ol type="value>
+        <li><b>Last Resort Grill</b></li>
+        <li><b>Condor Chocolates</b></li>
+        <li><b>Cinnaholic</b></li>
+        <li><b>Insomnia Cookies</b></li>
+        <li><b>Nothing Bundt Cakes</b></li>
+ </ol> 
+  <H3>PRICING</H3>
+    <table border=1>
+      <tr>
+        <th>Last Resort Grill</th><th>Condor Chocolates</th><th>Cinnaholic</th><th>Insomnia Cookies</th><th>Nothing Bundt Cakes</th>
+      </tr>
+      </div>
+      <div style="text-align:center">
+      <tr>
+        <td>$$</td><td>$$</td><td>$</td><td>$</td><td>$$</td>
+      </tr>
+       </div>
    </body>
 </html>
