--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       <tr>
         <th>Mama's Boy</th><th>Ike and Jane Cafe and Bakery</th><th>Mama Jewel's Kitchen</th><th>Athens Bagel Company</th><th>Mayflower Restaurant</th>
       </tr>
-      </div>
-      <div style="text-align:center">
       <tr>
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
@@ -33,7 +31,7 @@
        </div>
        <div style="text-align:left">
          <H3>TOP 5</H3>
- <ol type="value>
+ <ol type="value">
         <li><b>The Place</b></li>
         <li><b>The National</b></li>
         <li><b>Clocked</b></li>
@@ -45,8 +43,6 @@
       <tr>
         <th>The Place</th><th>The National</th><th>Clocked</th><th>Heirloom Cafe</th><th>Cali-n-Tito's</th>
       </tr>
-      </div>
-      <div style="text-align:center">
       <tr>
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
@@ -91,8 +87,6 @@
       <tr>
         <th>Last Resort Grill</th><th>Condor Chocolates</th><th>Cinnaholic</th><th>Insomnia Cookies</th><th>Nothing Bundt Cakes</th>
       </tr>
-      </div>
-      <div style="text-align:center">
       <tr>
         <td>$$</td><td>$$</td><td>$</td><td>$</td><td>$$</td>
       </tr>
