--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    </div>
    <div style="text-align:left">
          <H3>TOP 5</H3>
- <ol type="value>
+ <ol type="value">
         <li><b>Last Resort Grill</b></li>
         <li><b>Trappeze Pub</b></li>
         <li><b>South Kitchen+Bar</b></li>
@@ -75,7 +75,7 @@
    </div>
    <div style="text-align:left">
          <H3>TOP 5</H3>
- <ol type="value>
+ <ol type="value">
         <li><b>Last Resort Grill</b></li>
         <li><b>Condor Chocolates</b></li>
         <li><b>Cinnaholic</b></li>
