--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
        </div>
-      <div style="text-align:center">
+     
+       <div style="text-align:center">
         <H2>LUNCH</H2>
        </div>
        <div style="text-align:left">
@@ -47,10 +48,11 @@
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
        </div>
+  
   <div style="text-align:center">
         <H2>DINNER</H2>
    </div>
-   <div style="text-align:left">
+   <divv style="text-align:left">
          <H3>TOP 5</H3>
  <ol type="value">
         <li><b>Last Resort Grill</b></li>
@@ -70,7 +72,8 @@
         <td>$$$</td><td>$$</td><td>$$$</td><td>$$</td><td>$$</td>
       </tr>
        </div>
-   <div style="text-align:center">
+   
+  <div style="text-align:center">
         <H2>DESSERT</H2>
    </div>
    <div style="text-align:left">
