--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <tr>
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
+       </table>
        </div>
-     
        <div style="text-align:center">
         <H2>LUNCH</H2>
        </div>
@@ -47,8 +47,8 @@
       <tr>
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
+         </table>
        </div>
-  
   <div style="text-align:center">
         <H2>DINNER</H2>
    </div>
@@ -71,6 +71,7 @@
       <tr>
         <td>$$$</td><td>$$</td><td>$$$</td><td>$$</td><td>$$</td>
       </tr>
+      </table>
        </div>
    
   <div style="text-align:center">
@@ -93,6 +94,7 @@
       <tr>
         <td>$$</td><td>$$</td><td>$</td><td>$</td><td>$$</td>
       </tr>
+     </table>
        </div>
    </body>
 </html>
