--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <style>
      h2{color:blue;}
    <H2>BREAKFAST</H2>
+   </style>
   </div>
      <div style="text-align:left">
     <H3>TOP 5</H3>
