--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div style="text-align:center">
         <H2>DINNER</H2>
    </div>
-   <divv style="text-align:left">
+   <div style="text-align:left">
          <H3>TOP 5</H3>
  <ol type="value">
         <li><b>Last Resort Grill</b></li>
@@ -96,5 +96,12 @@
       </tr>
      </table>
        </div>
+  <div style="text-align:center">
+    <p>
+      <h5>
+        For more information and suggestions on your foodie needs in Athens, Georgia visit TripAdvisor.com or click the link below to be redirected to their website!
+      <A href="https://www.tripadvisor.com/Restaurants-g29209-Athens_Georgia.html">World-Wide Web Page</A>
+    </h5>
+    </p>
    </body>
 </html>
