--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
        </table>
+       <img src="breakfast.jpg" alt="The Most Important Meal of the Day">
        </div>
        <div style="text-align:center">
         <H2>LUNCH</H2>
@@ -48,6 +49,7 @@
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
          </table>
+         <img src="lunch2.jpg" alt="Catfish Friday's at The Place">
        </div>
   <div style="text-align:center">
         <H2>DINNER</H2>
@@ -72,6 +74,7 @@
         <td>$$$</td><td>$$</td><td>$$$</td><td>$$</td><td>$$</td>
       </tr>
       </table>
+     <img src="dinner.jpg" alt="Last Resort Grill Dinner Option">
        </div>
    
   <div style="text-align:center">
@@ -95,12 +98,13 @@
         <td>$$</td><td>$$</td><td>$</td><td>$</td><td>$$</td>
       </tr>
      </table>
+     <img src="dessert2.jpg" alt="Last Resort Grill Cheesecake">
        </div>
   <div style="text-align:center">
     <p>
       <h5>
         For more information and suggestions on your foodie needs in Athens, Georgia visit TripAdvisor.com or click the link below to be redirected to their website!
-      <A href="https://www.tripadvisor.com/Restaurants-g29209-Athens_Georgia.html">World-Wide Web Page</A>
+      <A href="https://www.tripadvisor.com/Restaurants-g29209-Athens_Georgia.html">The BEST Restaurants in Athens</A>
     </h5>
     </p>
    </body>
