--- a/index.html
+++ b/index.html
@@ -107,5 +107,20 @@
       <A href="https://www.tripadvisor.com/Restaurants-g29209-Athens_Georgia.html">The BEST Restaurants in Athens</A>
     </h5>
     </p>
+  </div>
+  <div style="text-align:right">
+    <p>In the words of Virginia Woolf: 
+<q>One cannot think well, love well, or sleep well, if one has not dined well.</q>
+So I say let them eat cake, and fried chicken, and pasta, and french fries, let them eat it ALL!</p>
+  </div>
+  <div style="text-align:center">
+    <p>How satisfied were you with this website?<p>
+    <select>
+  <option value="very satisfied">Ultra-Satisfied</option>
+  <option value="satisfied">Satisfied</option>
+  <option value="neutral">Neutral</option>
+  <option value="very dissatisfed">Unsatisfied</option>
+</select>
+  </div>
    </body>
 </html>
