--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
   <title>Foodie in Ath</title>
+    <style>
+body {background-color: lightcoral;}
+    </style>
   </head>
 <body>
  <div style="text-align:center">
