--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <title>Foodie in Ath</title>
     <style>
 body {background-color: lightcoral;}
+      h1   {color: Azure;}
+      p {color:Azure;}
     </style>
   </head>
 <body>
