--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <title>Foodie in Ath</title>
     <style>
 body {background-color: lightcoral;}
-      h1   {color: Azure;}
+      h1 {color: MediumSeaGreen;}
       p {color:Azure;}
+      h2 {color: MediumSeaGreen;}
+      h3 {color:Azure;}
     </style>
   </head>
 <body>
