--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ body {background-color: lightcoral;}
       p {color:Azure;}
       h2 {color: MediumSeaGreen;}
       h3 {color:Azure;}
+      ol {color:MediumSeaGreen;}
+      table {color: MediumSeaGreen;}
     </style>
   </head>
 <body>
