--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <title>Foodie in Ath</title>
     <style>
 body {background-color: lightcoral;}
-      h1 {color: MediumSeaGreen;}
+      h1 {color: MintCream;}
       p {color:Azure;}
-      h2 {color: MediumSeaGreen;}
+      h2 {color: MintCream;}
       h3 {color:Azure;}
-      ol {color:MediumSeaGreen;}
-      table {color: MediumSeaGreen;}
+      ol {color:MintCream;}
+      table {color:MintCream;}
     </style>
   </head>
 <body>
