--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <style>
 body {background-color: lightcoral;}
       h1 {color: MintCream;}
-      p {color:Azure;}
+      p {color:MidnightBlue;}
       h2 {color: MintCream;}
-      h3 {color:Azure;}
+      h3 {color:MidnightBlue;}
       ol {color:MintCream;}
       table {color:MintCream;}
+      h5 {color:MintCream;}
     </style>
   </head>
 <body>
