--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <title>Foodie in Ath</title>
-    <style>
+    <style type="text/css">
 body {background-color: lightcoral;}
       h1 {color: MintCream;}
       p {color:MidnightBlue;}
