--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Foodie in Ath</title>
     <style type="text/css">
 body {background-color: lightcoral;}
-      h1 {color: MintCream;}
+      h1 { color: mintcream;font-family: georgia;font-size: 300%}
       p {color:MidnightBlue;}
       h2 {color: MintCream;}
       h3 {color:MidnightBlue;}
