--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>Foodie in Ath</title>
     <style type="text/css">
 body {background-color: lightcoral;}
-      h1 { color: mintcream;font-family: georgia;font-size: 300%}
-      p {color:MidnightBlue;}
-      h2 {color: MintCream;}
-      h3 {color:MidnightBlue;}
-      ol {color:MintCream;}
-      table {color:MintCream;}
-      h5 {color:MintCream;}
+      h1 { color: mintcream;font-family: Georgia;font-size: 300%}
+      p  {color: midnightblue;font-family: Comic Sans;}
+      h2 {color: MintCream;font-family: Georgia;}
+      h3 {color:MidnightBlue;font-family: Georgia}
+      ol {color:MintCream;font-family: Comic Sans}
+      table {color:MintCream;font-family: Times New Roman}
+      h5 {color:MintCream;font-family: Times New Roman}
       #p01 {border: 2px solid mintcream;}
     </style>
   </head>
