--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <style type="text/css">
 body {background-color: lightcoral;}
       h1 { color: mintcream;font-family: Georgia;font-size: 300%}
-      p  {color: midnightblue;font-family: ComicSans;}
+      p  {color: midnightblue;font-family: Verdana;}
       h2 {color: MintCream;font-family: Georgia;}
-      h3 {color:MidnightBlue;font-family: Georgia}
-      ol {color:MintCream;font-family: Comic Sans}
-      table {color:MintCream;font-family: TimesNewRoman}
-      h5 {color:MintCream;font-family: TimesNewRoman}
+      h3 {color:MidnightBlue;font-family: Georgia;}
+      ol {color:MintCream;font-family: Verdana;}
+      table {color:MintCream;font-family: Times;}
+      h5 {color:MintCream;font-family: Times;}
       #p01 {border: 2px solid mintcream;}
     </style>
   </head>
