--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {background-color: lightcoral;}
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
        </table>
-       <img src="![breakfast](https://user-images.githubusercontent.com/46823962/56436139-d8a17b00-62a8-11e9-9dda-8ff9e1f4cdcc.jpg)" alt="The Most Important Meal of the Day">
+       <img src="https://user-images.githubusercontent.com/46823962/56436139-d8a17b00-62a8-11e9-9dda-8ff9e1f4cdcc.jpg" alt="The Most Important Meal of the Day">
        </div>
        <div style="text-align:center">
         <H2>LUNCH</H2>
@@ -61,7 +61,7 @@ body {background-color: lightcoral;}
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
          </table>
-         <img src="![lunch](https://user-images.githubusercontent.com/46823962/56436306-5796b380-62a9-11e9-8333-bea23ed4f150.jpg)" alt="Catfish Friday's at The Place">
+         <img src="https://user-images.githubusercontent.com/46823962/56436306-5796b380-62a9-11e9-8333-bea23ed4f150.jpg" alt="Catfish Friday's at The Place">
        </div>
   <div style="text-align:center">
         <H2>DINNER</H2>
@@ -84,7 +84,7 @@ body {background-color: lightcoral;}
         <td>$$$</td><td>$$</td><td>$$$</td><td>$$</td><td>$$</td>
       </tr>
       </table>
-     <img src="![dinner](https://user-images.githubusercontent.com/46823962/56436275-42218980-62a9-11e9-80c4-abbed7a1c707.jpg)" alt="Last Resort Grill Dinner Option">
+     <img src="https://user-images.githubusercontent.com/46823962/56436275-42218980-62a9-11e9-80c4-abbed7a1c707.jpg" alt="Last Resort Grill Dinner Option">
   </div>
    
   <div style="text-align:center">
@@ -108,7 +108,7 @@ body {background-color: lightcoral;}
         <td>$$</td><td>$$</td><td>$</td><td>$</td><td>$$</td>
       </tr>
      </table>
-     <img src="![dessert](https://user-images.githubusercontent.com/46823962/56436172-f40c8600-62a8-11e9-8688-444c8b21efc3.jpg)" alt="Last Resort Grill Cheesecake">
+     <img src="https://user-images.githubusercontent.com/46823962/56436172-f40c8600-62a8-11e9-8688-444c8b21efc3.jpg" alt="Last Resort Grill Cheesecake">
        </div>
   <div style="text-align:center">
     <h5>
