--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ body {background-color: lightcoral;}
      <img src="https://user-images.githubusercontent.com/46823962/56436172-f40c8600-62a8-11e9-8688-444c8b21efc3.jpg" alt="Last Resort Grill Cheesecake">
        </div>
   <div style="text-align:center">
+   <p>As an <abbr title="University of Georgia">UGA</abbr> student I love to eat. My goal is to eat at every single brunch place in Athens before I graduate college.</p>
     <h5>
         For more information and suggestions on your foodie needs in Athens, Georgia visit TripAdvisor.com or click the link below to be redirected to their website!
       <A href="https://www.tripadvisor.com/Restaurants-g29209-Athens_Georgia.html">The BEST Restaurants in Athens</A>
