--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body {background-color: lightcoral;}
       table {color:MintCream;font-family: Times;}
       h5 {color:MintCream;font-family: Times;}
       #p01 {border: 2px solid mintcream;}
+      address {color: midnightblue;font-family: Georgia;}
     </style>
   </head>
 <body>
@@ -130,6 +131,12 @@ So I say let them eat cake, and fried chicken, and pasta, and french fries, let 
   <option value="neutral">Neutral</option>
   <option value="very dissatisfed">Unsatisfied</option>
 </select>
+    <address>
+To Send in Your Suggestions Please Email <a href="diyah.barnes25@uga.edu">Diyah Barnes</a>.<br> 
+or Visit Us at:<br>
+1270 Barnett Shoals Rd, Athens, Georgia<br>
+USA
+</address>
   </div>
    </body>
 </html>
