--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@ So I say let them eat cake, and fried chicken, and pasta, and french fries, let 
   <option value="neutral">Neutral</option>
   <option value="very dissatisfed">Unsatisfied</option>
 </select>
+    <button type="button" onclick="alert('Thanks for your input!!')">Submit!</button>
     <address>
 To Send in Your Suggestions Please Email <a href="diyah.barnes25@uga.edu">Diyah Barnes</a>.<br> 
 or Visit Us at:<br>
-1270 Barnett Shoals Rd, Athens, Georgia<br>
+P.O Box: 1235, Georgia<br>
 USA
 </address>
   </div>
