--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {background-color: lightcoral;}
       h5 {color:MintCream;font-family: Times;}
       #p01 {border: 2px solid mintcream;}
       address {color: midnightblue;font-family: Georgia;}
+      caption {color: mintcream; font-family: Times;}
     </style>
   </head>
 <body>
@@ -32,6 +33,7 @@ body {background-color: lightcoral;}
  </ol>
     <H3>PRICING</H3>
     <table border=1>
+      <caption>Breakfast Prices</caption>
       <tr>
         <th>Mama's Boy</th><th>Ike and Jane Cafe and Bakery</th><th>Mama Jewel's Kitchen</th><th>Athens Bagel Company</th><th>Mayflower Restaurant</th>
       </tr>
@@ -56,13 +58,14 @@ body {background-color: lightcoral;}
  <H3>PRICING</H3>
     <table border=1>
       <tr>
+        <caption>Lunch Prices</caption>
         <th>The Place</th><th>The National</th><th>Clocked</th><th>Heirloom Cafe</th><th>Cali-n-Tito's</th>
       </tr>
       <tr>
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
          </table>
-         <img src="https://user-images.githubusercontent.com/46823962/56436306-5796b380-62a9-11e9-8333-bea23ed4f150.jpg" alt="Catfish Friday's at The Place">
+         <img src="https://user-images.githubusercontent.com/46823962/56436306-5796b380-62a9-11e9-8333-bea23ed4f150.jpg" alt="Catfish Friday's at The Place" height="200" width="400">
        </div>
   <div style="text-align:center">
         <H2>DINNER</H2>
@@ -79,6 +82,7 @@ body {background-color: lightcoral;}
   <H3>PRICING</H3>
     <table border=1>
       <tr>
+        <caption>Dinner Prices</caption>
         <th>Last Resort Grill</th><th>Trappeze Pub</th><th>South Kitchen+Bar</th><th>Taqueria Tsunami</th><th>Taqueria del Sol</th>
       </tr>
       <tr>
@@ -102,6 +106,7 @@ body {background-color: lightcoral;}
  </ol> 
   <H3>PRICING</H3>
     <table border=1>
+      <caption>Dessert Prices</caption>
       <tr>
         <th>Last Resort Grill</th><th>Condor Chocolates</th><th>Cinnaholic</th><th>Insomnia Cookies</th><th>Nothing Bundt Cakes</th>
       </tr>
