--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {background-color: lightcoral;}
         <td>$$</td><td>$</td><td>$$</td><td>$</td><td>$$$</td>
       </tr>
        </table>
-       <img src="https://user-images.githubusercontent.com/46823962/56436139-d8a17b00-62a8-11e9-9dda-8ff9e1f4cdcc.jpg" alt="The Most Important Meal of the Day">
+       <img src="https://user-images.githubusercontent.com/46823962/56436139-d8a17b00-62a8-11e9-9dda-8ff9e1f4cdcc.jpg" alt="The Most Important Meal of the Day" height="200" width="400" align="middle">
        </div>
        <div style="text-align:center">
         <H2>LUNCH</H2>
@@ -65,7 +65,7 @@ body {background-color: lightcoral;}
         <td>$$</td><td>$$</td><td>$</td><td>$$$</td><td>$$</td>
       </tr>
          </table>
-         <img src="https://user-images.githubusercontent.com/46823962/56436306-5796b380-62a9-11e9-8333-bea23ed4f150.jpg" alt="Catfish Friday's at The Place" height="200" width="400">
+         <img src="https://user-images.githubusercontent.com/46823962/56436306-5796b380-62a9-11e9-8333-bea23ed4f150.jpg" alt="Catfish Friday's at The Place" height="200" width="400" align="middle">
        </div>
   <div style="text-align:center">
         <H2>DINNER</H2>
@@ -89,7 +89,7 @@ body {background-color: lightcoral;}
         <td>$$$</td><td>$$</td><td>$$$</td><td>$$</td><td>$$</td>
       </tr>
       </table>
-     <img src="https://user-images.githubusercontent.com/46823962/56436275-42218980-62a9-11e9-80c4-abbed7a1c707.jpg" alt="Last Resort Grill Dinner Option">
+     <img src="https://user-images.githubusercontent.com/46823962/56436275-42218980-62a9-11e9-80c4-abbed7a1c707.jpg" alt="Last Resort Grill Dinner Option" height="200" width="400" align="middle">
   </div>
    
   <div style="text-align:center">
@@ -114,7 +114,7 @@ body {background-color: lightcoral;}
         <td>$$</td><td>$$</td><td>$</td><td>$</td><td>$$</td>
       </tr>
      </table>
-     <img src="https://user-images.githubusercontent.com/46823962/56436172-f40c8600-62a8-11e9-8688-444c8b21efc3.jpg" alt="Last Resort Grill Cheesecake">
+     <img src="https://user-images.githubusercontent.com/46823962/56436172-f40c8600-62a8-11e9-8688-444c8b21efc3.jpg" alt="Last Resort Grill Cheesecake" height="200" width="400" align="middle">
        </div>
   <div style="text-align:center">
    <p>As an <abbr title="University of Georgia">UGA</abbr> student I love to eat. My goal is to eat at every single brunch place in Athens before I graduate college.</p>
