--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ So I say let them eat cake, and fried chicken, and pasta, and french fries, let 
 </select>
     <button type="button" onclick="alert('Thanks for your input!!')">Submit!</button>
     <address>
-To Send in Your Suggestions Please Email <a href="diyah.barnes25@uga.edu">Diyah Barnes</a>.<br> 
+To Send in Your Suggestions Please Email <a href="https://mail.google.com/mail/u/0/#inbox">Diyah Barnes</a>.<br> 
 or Visit Us at:<br>
 P.O Box: 1235, Georgia<br>
 USA
